--- a/index.htm
+++ b/index.htm
@@ -15,8 +15,8 @@
   </label>
   <input type="checkbox" id="mopener" autocomplete="off">
   <ul id = "menu">
-  <li class = "menuItem" id="screen">Share screen</li>
-  <li class = "menuItem">two</li>
+  <li class = "menuItem" id="menu_screen">Share screen</li>
+  <li class = "menuItem"  id="menu_vid">Share video</li>
   </ul>
   </div>
   <div id="infowrap">
@@ -38,6 +38,7 @@
   </div>
   </div>
   </div>
+  <video id ="vid_canvas" draggable="true" autoplay><video>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/0.3.18/peer.min.js"></script>  
   <script src="webrtc.js"></script>
   
