--- a/index.htm
+++ b/index.htm
@@ -17,6 +17,7 @@
   <ul id = "menu">
   <li class = "menuItem" id="menu_screen">Share screen</li>
   <li class = "menuItem"  id="menu_vid">Share video</li>
+  <li class = "menuItem"  id="menu_file">Share file: <input id="file_inp" type="file"></li>
   </ul>
   </div>
   <div id="infowrap">
@@ -38,9 +39,13 @@
   </div>
   </div>
   </div>
-  <video id ="vid_canvas" draggable="true" autoplay><video>
+  <div class="draggable" id="vid_wrapper">
+  <div class="dragheader">Click here to move</div>
+  <video id ="vid_canvas" autoplay></video>
+</div>
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/0.3.18/peer.min.js"></script>  
   <script src="webrtc.js"></script>
-  
+  <script src="draggable.js"></script>
   </body>
 </html>
