add array buffer to file sharing

--- a/index.htm
+++ b/index.htm
@@ -22,10 +22,15 @@
   </div>
   <div id="infowrap">
   <div id="logMessage">Welcome! Please choose a username to log in: </div>
+
   <span id="logInForm">
   <input id="myId"><button id="logIn">Submit</button>
   </span>
  <div id="peerDeets">Please enter your friend's ID here: <input id="peerId"> and click here: <button id="connectTo">Connect</button> or wait for a connection.</div>
+  <div id="fileInfo">
+  <span id="fileText"></span>
+  <progress id="fileProgress" max="0" value="0"></progress>
+  </div>
   </div>
   </div>
   
