--- a/index.htm
+++ b/index.htm
@@ -15,9 +15,9 @@
   </label>
   <input type="checkbox" id="mopener" autocomplete="off">
   <ul id = "menu">
-  <li class = "menuItem" id="menu_screen">Share screen</li>
-  <li class = "menuItem"  id="menu_vid">Share video</li>
+  <li class = "menuItem"  id="menu_vid">Video call</li>
   <li class = "menuItem"  id="menu_file">Share file: <input id="file_inp" type="file"></li>
+  <li class = "menuItem" id="menu_screen">Share screen</li>
   </ul>
   </div>
   <div id="infowrap">
@@ -44,12 +44,8 @@
   </div>
   </div>
   </div>
-  <div class="draggable" id="vid_wrapper">
-  <div class="dragheader">Click here to move</div>
-  <video id ="vid_canvas" autoplay></video>
-</div>
   
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/0.3.18/peer.min.js"></script>  
+<script src="https://cdn.jsdelivr.net/npm/peerjs@0.3.20/dist/peer.min.js"></script>  
   <script src="webrtc.js"></script>
   <script src="draggable.js"></script>
   </body>
