add close buttons

--- a/index.htm
+++ b/index.htm
@@ -33,8 +33,10 @@
   </div>
   </div>
   </div>
-  
+  <div id="main">
+  <div id ="playArea"></div>
   <div id="messageArea"></div>
+  </div>
   <div id="sendarea">
   <div id="leftcol">
   <textarea id="sendMessageBox"></textarea>
