add photo sharing

--- a/index.htm
+++ b/index.htm
@@ -16,8 +16,9 @@
   <input type="checkbox" id="mopener" autocomplete="off">
   <ul id = "menu">
   <li class = "menuItem"  id="menu_vid">Video call</li>
-  <li class = "menuItem"  id="menu_file">Share file: <input id="file_inp" type="file"></li>
+  <li class = "menuItem"  id="menu_file">Share file: <input id="file_share" type="file"></li>
   <li class = "menuItem" id="menu_screen">Share screen</li>
+  <li class = "menuItem"  id="menu_pic">Show photo: <input id="pic_share" type="file"></li>
   </ul>
   </div>
   <div id="infowrap">
