--- a/index.htm
+++ b/index.htm
@@ -19,6 +19,7 @@
   <li class = "menuItem"  id="menu_file">Share file: <input id="file_share" type="file"></li>
   <li class = "menuItem" id="menu_screen">Share screen</li>
   <li class = "menuItem"  id="menu_pic">Show photo: <input id="pic_share" type="file"></li>
+  <li class = "menuItem"  id="menu_pdf">Show pdf: <input id="pdf_share" type="file"></li>
   </ul>
   </div>
   <div id="infowrap">
