--- a/index.htm
+++ b/index.htm
@@ -1,56 +1,59 @@
  <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>title</title>
-<link href="style.css" rel="stylesheet">
-  </head>
-  <body>
-  <div id = "wrapper">
-  <div id="topbar">
-  <div>
-  <label for="mopener">
-  <img id="burger" src="images/menu.png">
-  </label>
-  <input type="checkbox" id="mopener" autocomplete="off">
-  <ul id = "menu">
-  <li class = "menuItem"  id="menu_vid">Video call</li>
-  <li class = "menuItem"  id="menu_file">Share file: <input id="file_share" type="file"></li>
-  <li class = "menuItem" id="menu_screen">Share screen</li>
-  <li class = "menuItem"  id="menu_pic">Show photo: <input id="pic_share" type="file"></li>
-  <li class = "menuItem"  id="menu_pdf">Show pdf: <input id="pdf_share" type="file"></li>
-  </ul>
-  </div>
-  <div id="infowrap">
-  <div id="logMessage">Welcome! Please choose a username to log in: </div>
+ <html>
 
-  <span id="logInForm">
-  <input id="myId"><button id="logIn">Submit</button>
-  </span>
- <div id="peerDeets">Please enter your friend's ID here: <input id="peerId"> and click here: <button id="connectTo">Connect</button> or wait for a connection.</div>
-  <div id="fileInfo">
-  <span id="fileText"></span>
-  <progress id="fileProgress" max="0" value="0"></progress>
-  </div>
-  </div>
-  </div>
-  <div id="main">
-  <div id ="playArea"></div>
-  <div id="messageArea"></div>
-  </div>
-  <div id="sendarea">
-  <div id="leftcol">
-  <textarea id="sendMessageBox"></textarea>
-  </div>
-  <div id="rightcol">
-  <button id="sendButton">Send</button>
-  </div>
-  </div>
-  </div>
-  
-<script src="https://cdn.jsdelivr.net/npm/peerjs@0.3.20/dist/peer.min.js"></script>  
-  <script src="webrtc.js"></script>
-  <script src="draggable.js"></script>
-  </body>
-</html>
+ <head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>title</title>
+     <link href="style.css" rel="stylesheet">
+ </head>
+
+ <body>
+     <div id="wrapper">
+         <div id="topbar">
+             <div>
+                 <label for="mopener">
+                     <img id="burger" src="images/menu.png">
+                 </label>
+                 <input type="checkbox" id="mopener" autocomplete="off">
+                 <ul id="menu">
+                     <li class="menuItem" id="menu_vid">Video call</li>
+                     <li class="menuItem" id="menu_file"><label for="file_share">Share file </label><input id="file_share" type="file"></li>
+                     <li class="menuItem" id="menu_screen">Share screen</li>
+                     <li class="menuItem" id="menu_pic"><label for="pic_share">Show photo </label><input id="pic_share" type="file"></li>
+                     <li class="menuItem" id="menu_pdf"><label for="pdf_share">Show pdf </label><input id="pdf_share" type="file"></li>
+                 </ul>
+             </div>
+             <div id="infowrap">
+                 <div id="logMessage">Welcome! Please choose a username to log in: </div>
+
+                 <span id="logInForm">
+                     <input id="myId"><button id="logIn">Submit</button>
+                 </span>
+                 <div id="peerDeets">Please enter your friend's ID here: <input id="peerId"> and click here: <button id="connectTo">Connect</button> or wait for a connection.</div>
+                 <div id="fileInfo">
+                     <span id="fileText"></span>
+                     <progress id="fileProgress" max="0" value="0"></progress>
+                 </div>
+             </div>
+         </div>
+         <div id="main">
+             <div id="playArea"></div>
+             <div id="messageArea"></div>
+         </div>
+         <div id="sendarea">
+             <div id="leftcol">
+                 <textarea id="sendMessageBox"></textarea>
+             </div>
+             <div id="rightcol">
+                 <button id="sendButton">Send</button>
+             </div>
+         </div>
+     </div>
+
+     <script src="https://cdn.jsdelivr.net/npm/peerjs@0.3.20/dist/peer.min.js"></script>
+     <script src="webrtc.js"></script>
+     <script src="draggable.js"></script>
+ </body>
+
+ </html>
