--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
                  <span id="logInForm">
                      <input id="myId"><button id="logIn">Submit</button>
                  </span>
-                 <div id="peerDeets">Enter your friend's ID here: <input id="peerId"> and click here: <button id="connectTo">Connect</button> or wait for a connection.</div>
+                 <div id="peerDeets">Enter your friend's ID here: <input id="peerId"> and click here: <button id="connectTo">Connect</button> or wait for a connection</div>
                  <div id="fileInfo">
                      <span id="fileText"></span>
                      <progress id="fileProgress" max="0" value="0"></progress>
