add touch events for mobile

--- a/index.htm
+++ b/index.htm
@@ -38,7 +38,7 @@
              <div id="playArea">
 			<!--start drawing stuff--> 
 	
-<div id="cnv_btns" class="invisible">
+<div id="cnv_btns">
     <button id="free_btn">Freehand</button>
     <button id="line_btn">Line</button>
     <button id="rect_btn">Rectangle</button>
@@ -57,7 +57,7 @@
 <div id="undo_cntrls"></div>
 </div>
 
-<div class="invisible" id="cnv_cntrls">
+<div id="cnv_cntrls">
     <div>
         <div class="dr_ctrl_inf">Line thickness</div>
         <input id="stroke_wt" type="range" min="5" max="20" value="10">
