--- a/index.htm
+++ b/index.htm
@@ -135,7 +135,7 @@
 	 <input type="radio" name="shaperad" id="picbgrad" autocomplete="off">
 	 <input type="radio" name="shaperad" id="undorad" autocomplete="off">
 	 </div>
-     <script src="https://cdn.jsdelivr.net/npm/peerjs@0.3.20/dist/peer.min.js"></script>
+     <script src="https://unpkg.com/peerjs@1.5.4/dist/peerjs.min.js"></script>
      <script src="webrtc.js"></script>
      <script src="draggable.js"></script>
 	 <script src="draw.js"></script>
